# rulebenchmark

./: README.md  pyproject.toml
data/: README.md
data/core_suite/: README.md  bike.csv
rulebenchmark/: data_configs.py  data_generator.py  results_0.csv  results_1.csv  results_2.csv  results_3.csv  results_4.csv  rule_generator.py  run_benchmarking.py  trivial_classifier.py  viz-svg.ipynb  viz.ipynb
