[project]
name = "rulebenchmark"
description = "Towards Comprehensive Benchmarking for Rule Induction"
version = "0.9.0"
authors = [
    { name = "Hagen Völzer, Daniel Horn, Yusik Kim", email = "hvoelzer@acm.org" }
]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "corels",
    "rulelearn"
]

[project.optional-dependencies]
dev = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
